--- a/news/templates/index.html
+++ b/news/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} {% block main %} {% for item in list_of_articles %}
+<img src="{{ item.urlToImage }}" alt="{{ item.title}}" />
 <p>author: {{ item.author }}</p>
 <p><a href="{{ item.url}}" target="_blank">title: {{ item.title }}</a></p>
 <p>description: {{ item.description }}</p>
