--- a/news/templates/navbar.html
+++ b/news/templates/navbar.html
@@ -18,12 +18,12 @@
           <a
             class="nav-link active btn btn-secondary"
             aria-current="page"
-            href="#"
+            href="/"
             >Reuters</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link btn btn-danger" href="#">BBC</a>
+          <a class="nav-link btn btn-danger" href="/bbc">BBC</a>
         </li>
         <li class="nav-item dropdown">
           <a
