added reuters source

--- a/news/templates/navbar.html
+++ b/news/templates/navbar.html
@@ -19,6 +19,14 @@
             class="nav-link active btn btn-secondary"
             aria-current="page"
             href="/"
+            >Home</a
+          >
+        </li>
+        <li class="nav-item me-2">
+          <a
+            class="nav-link active btn btn-secondary"
+            aria-current="page"
+            href="/reuters"
             >Reuters</a
           >
         </li>
