--- a/news/templates/index.html
+++ b/news/templates/index.html
@@ -6,9 +6,9 @@
   <p>author: {{ item.author }}</p>
   <p>description: {{ item.description }}</p>
   <p>
-    <a class="btn btn-primary" href="{{ item.url}}" target="_blank"
+    <!-- <a class="btn btn-primary" href="{{ item.url}}" target="_blank"
       >Click to read more</a
-    >
+    > -->
   </p>
   <p>Published On: {{ item.publishedAt}}</p>
   <hr />
