--- a/news/templates/index.html
+++ b/news/templates/index.html
@@ -10,7 +10,7 @@
       >Click to read more</a
     >
   </p>
-  <!-- <p>Published On: {{ item.publishedAt}}</p> -->
+  <p>Published On: {{ item.publishedAt}}</p>
   <hr />
 </div>
 {% endfor %} {% endblock main %}
