--- a/news/templates/index.html
+++ b/news/templates/index.html
@@ -7,8 +7,8 @@
   <p>description: {{ item.description }}</p>
   <p>
     <a class="btn btn-primary" href="{{ item.url}}" target="_blank"
-      >Click to read more</a
-    >
+      >Click To View Article
+    </a>
   </p>
   <p>Published On: {{ item.publishedAt}}</p>
   <hr />
