changed button color styling

--- a/news/templates/index.html
+++ b/news/templates/index.html
@@ -6,7 +6,7 @@
   <p>author: {{ item.author }}</p>
   <p>description: {{ item.description }}</p>
   <p>
-    <a class="btn btn-primary" href="{{ item.url}}" target="_blank"
+    <a class="btn btn-primary btn-sm" href="{{ item.url}}" target="_blank"
       >Click to read more</a
     >
   </p>
