--- a/news/templates/navbar.html
+++ b/news/templates/navbar.html
@@ -24,7 +24,7 @@
         </li>
         <li class="nav-item me-2">
           <a
-            class="nav-link active btn btn-secondary"
+            class="nav-link active btn btn-info"
             aria-current="page"
             href="/reuters"
             >Reuters</a
