--- a/news/templates/base.html
+++ b/news/templates/base.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="{{url_for('static', filename="style.css")}}">
-    <title>Document</title>
+    <title>News Artices</title>
   </head>
   <body>
     {% include "navbar.html" %} {% block main %} {% endblock main %}
